--- a/about.html
+++ b/about.html
@@ -36,7 +36,11 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
     </a>
-                                                      </nav>
+                                            <span class="Navbar__Delim">&centerdot;</span>
+    <a href="about.html">
+      <div class="Navbar__Btn"><span>😀</span> <span>About</span></div>
+    </a>
+                  </nav>
   <header class="Header">
           <div class="Header__Spacer Header__Spacer--NoCover">
     </div>
