--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
     </a>
-                                                      </nav>
+                                            <span class="Navbar__Delim">&centerdot;</span>
+    <a href="about.html">
+      <div class="Navbar__Btn"><span>😀</span> <span>About</span></div>
+    </a>
+                  </nav>
   <header class="Header">
         <div class="Header__Cover">
       <img src="https://www.notion.so/images/page-cover/woodcuts_2.jpg">
@@ -49,7 +53,16 @@
     </div>
       </header>
   <article class="ArticleList">
-                            <article class="Article">
+                <article class="Article">
+      <h3 class="Article__Title">
+                    <a href="534f403122c448e9b0897a04e91e9f09.html">
+              My first blog            </a>
+          </h3>
+            <div class="DateTagBar">
+                  <span class="DateTagBar__Item DateTagBar__Date">Posted on Mon, Aug 2, 2021</span>
+                            </div>
+    </article>
+                      <article class="Article">
       <h3 class="Article__Title">
             <span>📝</span>        <a href="welcome.html">
               Welcome to Notablog            </a>
