--- a/welcome.html
+++ b/welcome.html
@@ -38,7 +38,11 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
     </a>
-                                                      </nav>
+                                            <span class="Navbar__Delim">&centerdot;</span>
+    <a href="about.html">
+      <div class="Navbar__Btn"><span>😀</span> <span>About</span></div>
+    </a>
+                  </nav>
   <header class="Header">
           <div class="Header__Cover">
         <img src="https://www.notion.so/images/page-cover/met_william_morris_1877_willow.jpg">
