--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Chrome, Firefox OS and Opera Status Bar Color -->
   <meta name="theme-color" content="#FFFFFF">
-  <meta property="og:title" content="Notablog">
-    <meta name="description" content="A minimalistic blog generator for Notion.so (Current version: v0.5.0)">
-  <meta property="og:description" content="A minimalistic blog generator for Notion.so (Current version: v0.5.0)">
+  <meta property="og:title" content="My Blog">
+    <meta name="description" content="I have to find the good one maybe !!!">
+  <meta property="og:description" content="I have to find the good one maybe !!!">
     <meta property="og:type" content="blog">
-  <title>Notablog</title>
+  <title>My Blog</title>
   <!-- Favicon -->
     <link rel="shortcut icon" href="📖">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
@@ -34,11 +34,7 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
     </a>
-                                            <span class="Navbar__Delim">&centerdot;</span>
-    <a href="about.html">
-      <div class="Navbar__Btn"><span>😀</span> <span>About</span></div>
-    </a>
-                  </nav>
+                                              </nav>
   <header class="Header">
         <div class="Header__Cover">
       <img src="https://www.notion.so/images/page-cover/woodcuts_2.jpg">
@@ -46,31 +42,22 @@
         <div class="Header__Spacer ">
     </div>
         <div class="Header__Icon"><span>📖</span></div>
-        <h1 class="Header__Title">Notablog</h1>
+        <h1 class="Header__Title">My Blog</h1>
         <div class="Header__Desc">
       <span class="Header__DescBigQuoteMark">&ldquo;</span>
-      <span class="SemanticStringArray"><span class="SemanticString">A minimalistic blog generator for </span><span class="SemanticString"><a class="SemanticString__Fragment SemanticString__Fragment--Link" href="http://notion.so">Notion.so</a></span><span class="SemanticString"> (Current version: </span><span class="SemanticString"><strong class="SemanticString__Fragment SemanticString__Fragment--Bold">v0.5.0</strong></span><span class="SemanticString">)</span></span>      <span class="Header__DescBigQuoteMark">&bdquo;</span>
+      <span class="SemanticStringArray"><span class="SemanticString">I have to find the good one maybe !!!</span></span>      <span class="Header__DescBigQuoteMark">&bdquo;</span>
     </div>
       </header>
   <article class="ArticleList">
                 <article class="Article">
       <h3 class="Article__Title">
-                    <a href="534f403122c448e9b0897a04e91e9f09.html">
-              My first blog            </a>
-          </h3>
-            <div class="DateTagBar">
-                  <span class="DateTagBar__Item DateTagBar__Date">Posted on Mon, Aug 2, 2021</span>
-                            </div>
-    </article>
-                      <article class="Article">
-      <h3 class="Article__Title">
-            <span>📝</span>        <a href="welcome.html">
-              Welcome to Notablog            </a>
+            <span>🌍</span>        <a href="534f403122c448e9b0897a04e91e9f09.html">
+              Hello World !            </a>
           </h3>
             <p class="Article__Desc">
-          <span class="SemanticStringArray"><span class="SemanticString"><mark class="SemanticString__Fragment SemanticString__Fragment--HighlightedColor SemanticString__Fragment--ColorBlue"><strong class="SemanticString__Fragment SemanticString__Fragment--Bold">Notablog</strong></mark></span><span class="SemanticString"> can generate a blog from a </span><span class="SemanticString"><a class="SemanticString__Fragment SemanticString__Fragment--Link" href="https://www.notion.so/"><em class="SemanticString__Fragment SemanticString__Fragment--Italic">Notion</em></a></span><span class="SemanticString"><em class="SemanticString__Fragment SemanticString__Fragment--Italic"> table.</em></span></span>      </p>
+          <span class="SemanticStringArray"><span class="SemanticString">First Blog Post</span></span>      </p>
             <div class="DateTagBar">
-                  <span class="DateTagBar__Item DateTagBar__Date">Posted on Sat, Feb 15, 2020</span>
+                  <span class="DateTagBar__Item DateTagBar__Date">Posted on Mon, Aug 2, 2021</span>
                             <span class="DateTagBar__Item DateTagBar__Tag DateTagBar__Tag--blue">
             <a href="tag/announcement.html">announcement</a>
           </span>
@@ -78,7 +65,7 @@
     </article>
                                                               </article>
   <footer class="Footer">
-        <div>&copy; Notablog 2019</div>
+        <div>&copy; My Blog 2019</div>
         <div>&centerdot;</div>
         <div>Powered by <a href="https://github.com/dragonman225/notablog" target="_blank"
             rel="noopener noreferrer">Notablog</a>.
