--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <!-- Chrome, Firefox OS and Opera Status Bar Color -->
   <meta name="theme-color" content="#FFFFFF">
   <meta property="og:title" content="My Blog">
-    <meta name="description" content="I have to find the good one maybe !!!">
-  <meta property="og:description" content="I have to find the good one maybe !!!">
+    <meta name="description" content="Within infinite myths lies an eternal truths.">
+  <meta property="og:description" content="Within infinite myths lies an eternal truths.">
     <meta property="og:type" content="blog">
   <title>My Blog</title>
   <!-- Favicon -->
@@ -34,7 +34,7 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
     </a>
-                                              </nav>
+                                                      </nav>
   <header class="Header">
         <div class="Header__Cover">
       <img src="https://www.notion.so/images/page-cover/woodcuts_2.jpg">
@@ -45,7 +45,7 @@
         <h1 class="Header__Title">My Blog</h1>
         <div class="Header__Desc">
       <span class="Header__DescBigQuoteMark">&ldquo;</span>
-      <span class="SemanticStringArray"><span class="SemanticString">I have to find the good one maybe !!!</span></span>      <span class="Header__DescBigQuoteMark">&bdquo;</span>
+      <span class="SemanticStringArray"><span class="SemanticString">Within infinite myths lies an eternal truths.</span></span>      <span class="Header__DescBigQuoteMark">&bdquo;</span>
     </div>
       </header>
   <article class="ArticleList">
@@ -63,7 +63,7 @@
           </span>
                   </div>
     </article>
-                                                              </article>
+                                                                          </article>
   <footer class="Footer">
         <div>&copy; My Blog 2019</div>
         <div>&centerdot;</div>
