--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="blog">
   <title>My Blog</title>
   <!-- Favicon -->
-    <link rel="shortcut icon" href="📖">
+    <link rel="shortcut icon" href="✒️">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.19.0/themes/prism.min.css">
@@ -32,7 +32,7 @@
 <body>
   <nav class="Navbar">
     <a href="index.html">
-      <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
+      <div class="Navbar__Btn"><span>✒️</span> <span>Home</span></div>
     </a>
                                                       </nav>
   <header class="Header">
@@ -41,7 +41,7 @@
     </div>
         <div class="Header__Spacer ">
     </div>
-        <div class="Header__Icon"><span>📖</span></div>
+        <div class="Header__Icon"><span>✒️</span></div>
         <h1 class="Header__Title">My Blog</h1>
         <div class="Header__Desc">
       <span class="Header__DescBigQuoteMark">&ldquo;</span>
@@ -63,7 +63,36 @@
           </span>
                   </div>
     </article>
-                                                                          </article>
+                      <article class="Article">
+      <h3 class="Article__Title">
+            <span>📝</span>        <a href="welcome.html">
+              Welcome to Notablog            </a>
+          </h3>
+            <p class="Article__Desc">
+          <span class="SemanticStringArray"><span class="SemanticString"><mark class="SemanticString__Fragment SemanticString__Fragment--HighlightedColor SemanticString__Fragment--ColorBlue"><strong class="SemanticString__Fragment SemanticString__Fragment--Bold">Notablog</strong></mark></span><span class="SemanticString"> can generate a blog from a </span><span class="SemanticString"><a class="SemanticString__Fragment SemanticString__Fragment--Link" href="https://www.notion.so/"><em class="SemanticString__Fragment SemanticString__Fragment--Italic">Notion</em></a></span><span class="SemanticString"><em class="SemanticString__Fragment SemanticString__Fragment--Italic"> table.</em></span></span>      </p>
+            <div class="DateTagBar">
+                  <span class="DateTagBar__Item DateTagBar__Date">Posted on Sat, Feb 15, 2020</span>
+                            <span class="DateTagBar__Item DateTagBar__Tag DateTagBar__Tag--blue">
+            <a href="tag/announcement.html">announcement</a>
+          </span>
+                  </div>
+    </article>
+                      <article class="Article">
+      <h3 class="Article__Title">
+            <span>🖋</span>        <a href="11fbd1728f184bd68d80d76a350b4aca.html">
+              This is a draft            </a>
+          </h3>
+            <div class="DateTagBar">
+                  <span class="DateTagBar__Item DateTagBar__Date">Posted on Sat, Aug 17, 2019</span>
+                            <span class="DateTagBar__Item DateTagBar__Tag DateTagBar__Tag--yellow">
+            <a href="tag/js.html">js</a>
+          </span>
+                  <span class="DateTagBar__Item DateTagBar__Tag DateTagBar__Tag--pink">
+            <a href="tag/web.html">web</a>
+          </span>
+                  </div>
+    </article>
+                                                  </article>
   <footer class="Footer">
         <div>&copy; My Blog 2019</div>
         <div>&centerdot;</div>
