--- a/11fbd1728f184bd68d80d76a350b4aca.html
+++ b/11fbd1728f184bd68d80d76a350b4aca.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="blog">
   <title>This is a draft</title>
   <!-- Favicon -->
-    <link rel="shortcut icon" href="📖">
+    <link rel="shortcut icon" href="✒️">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.19.0/themes/prism.min.css">
@@ -34,13 +34,9 @@
 <body>
   <nav class="Navbar">
     <a href="index.html">
-      <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
+      <div class="Navbar__Btn"><span>✒️</span> <span>Home</span></div>
     </a>
-                    <span class="Navbar__Delim">&centerdot;</span>
-    <a href="11fbd1728f184bd68d80d76a350b4aca.html">
-      <div class="Navbar__Btn"><span>🖋</span> <span>This is a draft</span></div>
-    </a>
-                                          </nav>
+                                                      </nav>
   <header class="Header">
           <div class="Header__Spacer Header__Spacer--NoCover">
     </div>
@@ -57,7 +53,7 @@
                   </div>
           </header>
       <article id="https://www.notion.so/11fbd1728f184bd68d80d76a350b4aca" class="PageRoot"></article>  <footer class="Footer">
-        <div>&copy; Notablog 2019</div>
+        <div>&copy; My Blog 2019</div>
         <div>&centerdot;</div>
         <div>Powered by <a href="https://github.com/dragonman225/notablog" target="_blank"
             rel="noopener noreferrer">Notablog</a>.
