--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>✒️</span> <span>Home</span></div>
     </a>
-                                      </nav>
+                                                              </nav>
   <header class="Header">
         <div class="Header__Cover">
       <img src="https://www.notion.so/images/page-cover/woodcuts_2.jpg">
@@ -63,7 +63,15 @@
           </span>
                   </div>
     </article>
-                                                  </article>
+                                                                      <article class="Article">
+      <h3 class="Article__Title">
+                    <a href="cd06e10902a84123a2060939c25d4c96.html">
+              Miscellaneous            </a>
+          </h3>
+            <div class="DateTagBar">
+                            </div>
+    </article>
+                          </article>
   <footer class="Footer">
         <div>&copy; My Blog 2019</div>
         <div>&centerdot;</div>
