--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Chrome, Firefox OS and Opera Status Bar Color -->
   <meta name="theme-color" content="#FFFFFF">
-  <meta property="og:title" content="About">
+  <meta property="og:title" content="About Me">
     <meta property="og:type" content="blog">
-  <title>About</title>
+  <title>About Me</title>
   <!-- Favicon -->
-    <link rel="shortcut icon" href="📖">
+    <link rel="shortcut icon" href="✒️">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.19.0/themes/prism.min.css">
@@ -34,21 +34,25 @@
 <body>
   <nav class="Navbar">
     <a href="index.html">
-      <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
+      <div class="Navbar__Btn"><span>✒️</span> <span>Home</span></div>
     </a>
                                             <span class="Navbar__Delim">&centerdot;</span>
     <a href="about.html">
-      <div class="Navbar__Btn"><span>😀</span> <span>About</span></div>
+      <div class="Navbar__Btn"><span>😀</span> <span>About Me</span></div>
+    </a>
+                <span class="Navbar__Delim">&centerdot;</span>
+    <a href="cd06e10902a84123a2060939c25d4c96.html">
+      <div class="Navbar__Btn"> <span>Miscellaneous</span></div>
     </a>
                   </nav>
   <header class="Header">
           <div class="Header__Spacer Header__Spacer--NoCover">
     </div>
         <div class="Header__Icon"><span>😀</span></div>
-        <h1 class="Header__Title">About</h1>
+        <h1 class="Header__Title">About Me</h1>
           </header>
       <article id="https://www.notion.so/a852ed0afa7c4bb29871984953b9e965" class="PageRoot"><div id="https://www.notion.so/ebe82b0ac59b42a181e9d411e314e679" class="ColorfulBlock ColorfulBlock--BgYellow Callout"><div class="Callout__Icon"><div class="Icon">💡</div></div><p class="Callout__Content"><span class="SemanticStringArray"><span class="SemanticString">This page appears in the navigation bar but not in the article list.</span></span></p></div><div id="https://www.notion.so/c47ff33a5f3a45f18f5a94e9636cfc73" class="ColorfulBlock ColorfulBlock--BgYellow Callout"><div class="Callout__Icon"><div class="Icon">💡</div></div><p class="Callout__Content"><span class="SemanticStringArray"><span class="SemanticString">You can use this feature to pin non-post pages such as an </span><span class="SemanticString"><mark class="SemanticString__Fragment SemanticString__Fragment--HighlightedColor SemanticString__Fragment--ColorBlue"><em class="SemanticString__Fragment SemanticString__Fragment--Italic">About</em></mark></span><span class="SemanticString"> page in the navigation bar.</span></span></p></div></article>  <footer class="Footer">
-        <div>&copy; Notablog 2019</div>
+        <div>&copy; My Blog 2019</div>
         <div>&centerdot;</div>
         <div>Powered by <a href="https://github.com/dragonman225/notablog" target="_blank"
             rel="noopener noreferrer">Notablog</a>.
