--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>✒️</span> <span>Home</span></div>
     </a>
-                                                              </nav>
+                                            <span class="Navbar__Delim">&centerdot;</span>
+    <a href="about.html">
+      <div class="Navbar__Btn"><span>😀</span> <span>About Me</span></div>
+    </a>
+                <span class="Navbar__Delim">&centerdot;</span>
+    <a href="cd06e10902a84123a2060939c25d4c96.html">
+      <div class="Navbar__Btn"> <span>Miscellaneous</span></div>
+    </a>
+                  </nav>
   <header class="Header">
         <div class="Header__Cover">
       <img src="https://www.notion.so/images/page-cover/woodcuts_2.jpg">
@@ -63,15 +71,7 @@
           </span>
                   </div>
     </article>
-                                                                      <article class="Article">
-      <h3 class="Article__Title">
-                    <a href="cd06e10902a84123a2060939c25d4c96.html">
-              Miscellaneous            </a>
-          </h3>
-            <div class="DateTagBar">
-                            </div>
-    </article>
-                          </article>
+                                                                                      </article>
   <footer class="Footer">
         <div>&copy; My Blog 2019</div>
         <div>&centerdot;</div>
