--- a/cd06e10902a84123a2060939c25d4c96.html
+++ b/cd06e10902a84123a2060939c25d4c96.html
@@ -1,1 +1,62 @@
-The template name has zero length, please check the "template" field in your Notion table.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <!-- Chrome, Firefox OS and Opera Status Bar Color -->
+  <meta name="theme-color" content="#FFFFFF">
+  <meta property="og:title" content="Miscellaneous">
+    <meta property="og:type" content="blog">
+  <title>Miscellaneous</title>
+  <!-- Favicon -->
+    <link rel="shortcut icon" href="✒️">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.19.0/themes/prism.min.css">
+  <link rel="stylesheet" type="text/css" href="css/SourceSansPro.css">
+  <link rel="stylesheet" type="text/css" href="css/notablog.css">
+  <link rel="stylesheet" type="text/css" href="css/theme.css">
+  <style>
+    :root {
+      font-size: 18px;
+    }
+
+    .DateTagBar {
+      margin-top: 1.0rem;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="Navbar">
+    <a href="index.html">
+      <div class="Navbar__Btn"><span>✒️</span> <span>Home</span></div>
+    </a>
+                                            <span class="Navbar__Delim">&centerdot;</span>
+    <a href="about.html">
+      <div class="Navbar__Btn"><span>😀</span> <span>About Me</span></div>
+    </a>
+                <span class="Navbar__Delim">&centerdot;</span>
+    <a href="cd06e10902a84123a2060939c25d4c96.html">
+      <div class="Navbar__Btn"> <span>Miscellaneous</span></div>
+    </a>
+                  </nav>
+  <header class="Header">
+          <div class="Header__Spacer Header__Spacer--NoCover">
+    </div>
+        <h1 class="Header__Title">Miscellaneous</h1>
+          </header>
+      <article id="https://www.notion.so/cd06e10902a84123a2060939c25d4c96" class="PageRoot"><div id="https://www.notion.so/b56d46bcf4254dfc8414ace8d6c4da49" class="ColorfulBlock ColorfulBlock--ColorDefault Text"><p class="Text__Content"><span class="SemanticStringArray"><span class="SemanticString">This is the section where random stuff will be there, for now it&#x27;s empty !!!!</span></span></p></div></article>  <footer class="Footer">
+        <div>&copy; My Blog 2019</div>
+        <div>&centerdot;</div>
+        <div>Powered by <a href="https://github.com/dragonman225/notablog" target="_blank"
+            rel="noopener noreferrer">Notablog</a>.
+        </div>
+    </footer>
+</body>
+
+</html>
