--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </a>
                                             <span class="Navbar__Delim">&centerdot;</span>
     <a href="about.html">
-      <div class="Navbar__Btn"><span>😀</span> <span>About Me</span></div>
+      <div class="Navbar__Btn"><span>🙋🏾‍♂️</span> <span>About Me</span></div>
     </a>
                 <span class="Navbar__Delim">&centerdot;</span>
     <a href="cd06e10902a84123a2060939c25d4c96.html">
-      <div class="Navbar__Btn"> <span>Miscellaneous</span></div>
+      <div class="Navbar__Btn"><span>😄</span> <span>Miscellaneous</span></div>
     </a>
                   </nav>
   <header class="Header">
