--- a/about.html
+++ b/about.html
@@ -38,17 +38,20 @@
     </a>
                                             <span class="Navbar__Delim">&centerdot;</span>
     <a href="about.html">
-      <div class="Navbar__Btn"><span>😀</span> <span>About Me</span></div>
+      <div class="Navbar__Btn"><span>🙋🏾‍♂️</span> <span>About Me</span></div>
     </a>
                 <span class="Navbar__Delim">&centerdot;</span>
     <a href="cd06e10902a84123a2060939c25d4c96.html">
-      <div class="Navbar__Btn"> <span>Miscellaneous</span></div>
+      <div class="Navbar__Btn"><span>😄</span> <span>Miscellaneous</span></div>
     </a>
                   </nav>
   <header class="Header">
-          <div class="Header__Spacer Header__Spacer--NoCover">
+          <div class="Header__Cover">
+        <img src="https://www.notion.so/images/page-cover/woodcuts_7.jpg">
+      </div>
+          <div class="Header__Spacer ">
     </div>
-        <div class="Header__Icon"><span>😀</span></div>
+        <div class="Header__Icon"><span>🙋🏾‍♂️</span></div>
         <h1 class="Header__Title">About Me</h1>
           </header>
       <article id="https://www.notion.so/a852ed0afa7c4bb29871984953b9e965" class="PageRoot"><div id="https://www.notion.so/20adef10a2a4403485d7eef332a5e641" class="ColorfulBlock ColorfulBlock--ColorDefault Text"><p class="Text__Content"><span class="SemanticStringArray"><span class="SemanticString">Hi, I am Rohit K</span></span></p></div><div id="https://www.notion.so/cd7af0dfe7734af596e2c3856dc15076" class="ColorfulBlock ColorfulBlock--ColorDefault Text"><p class="Text__Content"><span class="SemanticStringArray"></span></p></div></article>  <footer class="Footer">
