--- a/cd06e10902a84123a2060939c25d4c96.html
+++ b/cd06e10902a84123a2060939c25d4c96.html
@@ -38,16 +38,20 @@
     </a>
                                             <span class="Navbar__Delim">&centerdot;</span>
     <a href="about.html">
-      <div class="Navbar__Btn"><span>😀</span> <span>About Me</span></div>
+      <div class="Navbar__Btn"><span>🙋🏾‍♂️</span> <span>About Me</span></div>
     </a>
                 <span class="Navbar__Delim">&centerdot;</span>
     <a href="cd06e10902a84123a2060939c25d4c96.html">
-      <div class="Navbar__Btn"> <span>Miscellaneous</span></div>
+      <div class="Navbar__Btn"><span>😄</span> <span>Miscellaneous</span></div>
     </a>
                   </nav>
   <header class="Header">
-          <div class="Header__Spacer Header__Spacer--NoCover">
+          <div class="Header__Cover">
+        <img src="https://www.notion.so/images/page-cover/met_frederic_edwin_church_1871.jpg">
+      </div>
+          <div class="Header__Spacer ">
     </div>
+        <div class="Header__Icon"><span>😄</span></div>
         <h1 class="Header__Title">Miscellaneous</h1>
           </header>
       <article id="https://www.notion.so/cd06e10902a84123a2060939c25d4c96" class="PageRoot"><div id="https://www.notion.so/b56d46bcf4254dfc8414ace8d6c4da49" class="ColorfulBlock ColorfulBlock--ColorDefault Text"><p class="Text__Content"><span class="SemanticStringArray"><span class="SemanticString">This is the section where random stuff will be there, for now it&#x27;s empty !!!!</span></span></p></div></article>  <footer class="Footer">
